# dsrv-lsp

./: Cargo.toml  README.md
DSRV-lsp/: Cargo.toml
DSRV-lsp/src/: lang.rs  utils.rs
DSRV-lsp/src/lang/: analyzer.rs  pattern_matching.rs  syntax.rs  visitor_pattern.rs
DSRV-lsp/src/lang/syntax/: builtin_catalog.json  completion_candidates.rs  cst.rs  languageBuiltin.json  lexer.rs
DSRV-lsp/src/server/: backend.rs
DynSRV-lsp/: Cargo.toml
DynSRV-lsp/src/: analyzer.rs  lang.rs  lib.rs  main.rs  server.rs
DynSRV-lsp/src/lang/: analyzer.rs  syntax.rs  visitor_pattern.rs
DynSRV-lsp/src/lang/syntax/: completion_candidates.rs  cst.rs  span_wrapper.rs
DynSRV-lsp/src/server/: backend.rs  handler.rs  lexer.rs  mod.rs
TS-Server/: logger.ts  server.ts
src/: fixtures.rs  lang.rs  lib.rs  macros.rs  main.rs  server.rs  test_utils.rs  utils.rs
src/lang/: analyser.rs  analyzer.rs  pattern_matching.rs  syntax.rs
src/lang/syntax/: completion_candidates.rs  completions_list.rs  lexer.rs
src/lang/syntax/completions_list/: functions.rs  keywords_and_types.rs  list_and_map.rs  math.rs
src/server/: backend.rs  handler.rs
