[package]
name = "DSRV-lsp"
version = "0.1.0"
edition = "2024"
authors = ["Emilie Bang Holmberg <202304990@post.au.dk>"]
license = "GPL-3.0-only"

[[bin]]
name = "dsrv-lsp"
path = "src/main.rs"

[lib]
name = "dsrv_lsp"
path = "src/lib.rs"


[dependencies]
dashmap = "6.1.0"
ecow = "0.2.6"
lalr = "0.0.2"
lalrpop-util = "0.23.0"
log = "0.4.29"
logos = "0.16.1"
once_cell = "1.21.4"
regex = "1.12.3"
ropey = "1.6.1"
rowan = "0.16.1"
serde = "1.0.228"
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1"
tracing-subscriber = "0.3"
trustworthiness_checker = { git = "https://github.com/EmmiPigen/robosapiens-trustworthiness-checker", version = "0.1.0", branch = "Typed_with_Spans"}


