[package]
name = "DynSRV-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dynsrv-lsp"
path = "src/main.rs"

[lib]
name = "dynsrv_lsp"
path = "src/lib.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
trustworthiness_checker = { git = "https://github.com/INTO-CPS-Association/robosapiens-trustworthiness-checker", rev = "3405d3756f295090e27740b7b6df91e145dd251f" }


