[package]
name = "DynSRV-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dynsrv-lsp"
path = "src/main.rs"

[lib]
name = "dynsrv_lsp"
path = "src/lib.rs"


[dependencies]
dashmap = "6.1.0"
ecow = "0.2.6"
lalr = "0.0.2"
lalrpop-util = "0.23.0"
log = "0.4.29"
logos = "0.16.1"
regex = "1.12.3"
ropey = "1.6.1"
serde = "1.0.228"
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1"
tracing-subscriber = "0.3"
trustworthiness_checker = { git = "https://github.com/INTO-CPS-Association/robosapiens-trustworthiness-checker", version = "0.1.0" }


